findbugs session